[gd_scene load_steps=5 format=2]

[ext_resource path="res://resource/spr/virus.png" type="Texture" id=1]
[ext_resource path="res://scripts/Virus.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[node name="Virus" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8, 8 )
shape = SubResource( 1 )

[node name="UpdateTimer" type="Timer" parent="."]

[node name="CooldownTimer" type="Timer" parent="."]

[node name="NeighborArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NeighborArea"]
position = Vector2( 8, 8 )
shape = SubResource( 2 )
[connection signal="timeout" from="UpdateTimer" to="." method="_on_updateTimer_timeout"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldownTimer_timeout"]
